HP-1110 Fix video clipping in gallery

--- a/angular-fe/src/app/_assets/video/video.component.scss
+++ b/angular-fe/src/app/_assets/video/video.component.scss
@@ -10,6 +10,16 @@
 		&:last-child{
 			margin-bottom:0;
 		}
+
+		&--responsive {
+			position: relative;
+			width: 100%;
+			height: 100%;
+
+			.video-container {
+				position: unset;
+			}
+		}
 	}
 	&-container {
 		position: relative;
